<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.crypto.landing.MainFragmentViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="@dimen/dimens_8dp"
                android:gravity="center"
                android:text="@string/sort"
                android:onClick="@{() -> viewModel.sortCurrencies()}"
                app:drawableEndCompat="@drawable/ic_sort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="@dimen/dimens_8dp"
                android:gravity="center"
                android:onClick="@{() -> viewModel.updateCurrencies()}"
                android:text="@string/reset"
                app:drawableEndCompat="@drawable/ic_clear"
                app:layout_constraintEnd_toStartOf="@+id/textViewFilter"
                app:layout_constraintStart_toEndOf="@+id/textViewSort"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="@dimen/dimens_8dp"
                android:gravity="center"
                android:text="@string/filter"
                android:onClick="@{() -> viewModel.filterCurrencies()}"
                app:drawableEndCompat="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currencyRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSort"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currencyRv"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>