...
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="1dp"
        android:padding="@dimen/dimens_16dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@null"
            android:elevation="1dp"
            android:src="@{viewModel.currency.icon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:text="@{viewModel.currency.name +` price: ` + String.format(`%.2f`, viewModel.currency.price)  + ` Euro`}"
            android:textStyle="bold"
...
